src/app/examples/profile/profile.component.scss
.profile-image {
  cursor: pointer;
  position: relative;
  border-radius: 50%;
  overflow: hidden;
  background-size: 96px 96px;
  max-width: 100px;
  width: 100%;
  height: 100px;
}

.change-image {
  bottom: 0;
  color: #fff;
  font-size: 10px;
  font-weight: bold;
  left: 0;
  line-height: 10px;
  position: absolute;
  padding: 7px 0;
  text-align: center;
  width: 96px;
  background: rgba(0,0,0,.54);
}

